<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_workouts"
        android:icon="@drawable/ic_workout_24dp"
        android:iconTint="@color/default_text_color"
        android:title="@string/title_workouts" />

    <item
        android:id="@+id/navigation_meditation"
        android:icon="@drawable/ic_meditation_black_24dp"
        android:iconTint="@color/default_text_color"
        android:title="@string/title_meditation" />

    <item
        android:id="@+id/navigation_information"
        android:icon="@drawable/ic_rounded_info_24dp"
        android:iconTint="@color/default_text_color"
        android:contentDescription="@string/content_desc_info"
        android:title="@string/title_information" />

</menu>