<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="8dp"
    android:background="@drawable/card_top_radius"
    android:padding="20dp">

    <TextView
        android:id="@+id/tvDialogTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/exit_workout"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/default_text_color"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvDialogMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/confirm_exit"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/default_text_color"
        android:gravity="center"
        android:layout_marginBottom="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvDialogTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cornerRadius="16dp"
            android:text="@string/cancel"
            android:layout_marginEnd="32dp"
            android:textColor="@color/default_text_color"
            app:strokeColor="@color/button_background_color"
            android:paddingHorizontal="24dp"
            android:layout_gravity="center" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_background_color"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/confirm"
            android:textColor="@android:color/white"
            app:cornerRadius="20dp"
            android:paddingVertical="10dp"
            android:paddingHorizontal="24dp"
            android:layout_gravity="center"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
