<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/overlay"
    tools:context=".presentation.ui.workout.WorkoutDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutWorkoutDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            android:weightSum="5">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:background="@color/pastel_blue"
                android:backgroundTint="#90000000">

                <ImageView
                    android:id="@+id/ivBackArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_margin="16dp"
                    android:contentDescription="@string/back"
                    android:src="@drawable/ic_back_arrow_24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/white" />

                <ImageView
                    android:id="@+id/ivWorkoutImage"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end|bottom"
                    android:layout_marginStart="24dp"
                    android:contentDescription="@string/workout_image"
                    android:src="@drawable/workout1"
                    android:alpha="0.75"
                    android:scaleType="fitEnd"/>

                <TextView
                    android:id="@+id/tvWorkoutDescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    tools:text="A complete workout"
                    android:shadowRadius="4"
                    android:shadowColor="@color/default_text_color"
                    android:fontFamily="@font/roboto_light"
                    android:textColor="@color/white"
                    android:layout_marginEnd="150dp"
                    android:textSize="38sp"
                    android:padding="16dp" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:background="@color/overlay"
                android:layout_weight="2">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardElevation="16dp"
                    app:cardCornerRadius="0dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/card_top_radius"
                        android:paddingTop="16dp">

                        <TextView
                            android:id="@+id/tvWorkoutTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:gravity="center_horizontal"
                            android:fontFamily="@font/roboto_light"
                            android:textStyle="normal"
                            android:textSize="48sp"
                            android:layout_marginHorizontal="16dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            tools:text="Full Body Workout" />

                        <TextView
                            android:id="@+id/tvWorkoutLevel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:fontFamily="@font/roboto_light"
                            android:textSize="20sp"
                            app:layout_constraintBottom_toTopOf="@+id/roundedButton"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvWorkoutTitle"
                            tools:text="Beginner level" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/roundedButton"
                            android:layout_width="320dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:backgroundTint="@color/blacklight"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/start_training"
                            android:textColor="@android:color/white"
                            app:cornerRadius="20dp"
                            app:iconPadding="16dp"
                            android:layout_margin="32dp"
                            android:paddingVertical="16dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>